--- a/phone.html
+++ b/phone.html
@@ -160,11 +160,19 @@
                 <div class="side-sub">
                     <div class="sub">
                         <div class="box">
-                            <p>₹0-₹99,999</p>
+                            <p>₹0 - ₹99,999</p>
                         </div>
+                    </div> <div class="range-slider">
+                        <input type="range" id="vol" name="vol" min="0" max="99,999" acce>
+                    </div>
+                    <div class="money">
+                        <p>₹0</p>
+                        <p>₹99,999</p>
                     </div>
                 </div>
             </div>
+
+            
 
             <div class="separator-48"></div>
 
