--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                <img src="./Images/oneplus-logo.png" alt="logo" class="logo">
             </div>
             <div class="menu-container">
-               <div class="menu">Phone</div>
+               <div class="menu"><a href="phone.html">Phone</a></div>
                <div class="menu">TV & Display</div>
                <div class="menu">Audio & Watch</div>
                <div class="menu">Tablet</div>
@@ -45,7 +45,7 @@
             <div class="menu-icon-container">
                <div><i class="menu-icon fa-solid fa-magnifying-glass"></i></div>
                <div><i class="menu-icon fa-solid fa-cart-shopping"></i></div>
-               <div><i class="menu-icon fa-regular fa-user"></i></div>
+               <div><a href="login.html"><i class="menu-icon fa-regular fa-user"></i></a></div>
             </div>
 
          </div>
