--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="./Styles/styles.css">
    <script src="https://kit.fontawesome.com/0926a5a74f.js" crossorigin="anonymous"></script>
    <title>Oneplus</title>
 </head>
@@ -695,7 +695,7 @@
             <div class="program-menu foot">
                <div class="foot-5 zoro">Progams <i class="fa-solid fa-plus"></i></div>
                <div class="menus"><a href="#">Exchange Program</a></div>
-               <div class="menus">Red Cable Club</div>
+               <div class="menus"><a href="#">Red Cable Club</a></div>
             </div>
 
          </div>
