--- a/phone.html
+++ b/phone.html
@@ -5,11 +5,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phones</title>
-    <link rel="stylesheet" href="phone.css">
+    <link rel="stylesheet" href="./Styles/phone.css">
     <script src="https://kit.fontawesome.com/0926a5a74f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
+    <div class="header">
+        <div class="notification">
+           <p></p>
+           <p class="noti-text">Hit ‘Notify Me’ and stand a chance to win a OnePlus Open. Notify Me ›</p>
+           <p><i class="fa-solid fa-x x-icon"></i></p>
+        </div>
+        <div class="nav-menu" id="nav-menu">
+           <div class="bars">
+              <i class="fa-solid fa-bars"></i>
+           </div>
+           <div class="menu-1">
+              <div class="logo-container">
+                <a href="index.html"><img src="./Images/oneplus-logo.png" alt="logo" class="logo"></a>
+              </div>
+              <div class="menu-container">
+                 <div class="menu active"><a href="phone.html">Phone</a></div>
+                 <div class="menu">TV & Display</div>
+                 <div class="menu">Audio & Watch</div>
+                 <div class="menu">Tablet</div>
+                 <div class="menu">Accessories</div>
+                 <div class="menu">Offers</div>
+              </div>
+  
+           </div>
+           <div class="menu-2">
+              <div class="menu2-container">
+                 <div class="menu"><a href="#weekly">Store</a></div>
+                 <div class="menu"><a href="#topia">OneTopia</a></div>
+                 <div class="menu"><a href="#haad">OnePlus Featuring</a></div>
+                 <div class="menu"><a href="#community">Comunity</a></div>
+                 <div class="menu"><a href="#support">Support</a></div>
+              </div>
+              <div class="menu-icon-container">
+                 <div><i class="menu-icon fa-solid fa-magnifying-glass"></i></div>
+                 <div><i class="menu-icon fa-solid fa-cart-shopping"></i></div>
+                 <div><a href="login.html"><i class="menu-icon fa-regular fa-user"></i></a></div>
+              </div>
+  
+           </div>
+        </div>
+     </div>
+
     <div class="top-section">
         <div class="item">
             <img src="./Icons/all.svg">
@@ -371,9 +414,158 @@
                 </div>
             </div>
         </div>
-
-
     </div>
+
+    <div class="footer">
+        <div class="separator-2"></div>
+        
+        <div class="breadcrumbs">
+            <p class="zoro">Home <i class="fa-solid fa-greater-than"></i> Store <i class="fa-solid fa-greater-than"></i> Phone</p>
+        </div>
+
+        <div class="separator-2"></div>
+
+        <div class="footer-menu">
+           <div class="phone-menu foot">
+              <div class="foot-1 zoro">Phone <i class="fa-solid fa-plus"></i></div>
+              <div class="foot-1-menu">
+                 <div class="menus"><a href="#">OnePlus Open</a></div>
+                 <div class="menus"><a href="#">OnePlus 11 5G</a></div>
+                 <div class="menus"><a href="#">OnePlus 11R 5G</a></div>
+                 <div class="menus"><a href="#">OnePlus Nord 3 5G</a></div>
+                 <div class="menus"><a href="#">OnePlus Nord CE3 5G</a></div>
+                 <div class="menus"><a href="#">OnePlus Nord CE 3 Lite 5G</a></div>
+                 <div class="menus"><a href="#">OnePlus 10R 5G</a></div>
+                 <div class="menus"><a href="#">OnePlus 10 Pro 5G</a></div>
+                 <div class="menus"><a href="#">OnePlus Nord 2T 5G</a></div>
+                 <div class="menus"><a href="#">OnePlus Nord CE 2 Lite 5G</a></div>
+                 <div class="menus"><a href="#">OnePlus 10T 5G</a></div>
+                 <div class="menus"><a href="#">OnePlus 9 5G</a></div>
+                 <div class="menus"><a href="#">OnePlus 9R 5G</a></div>
+              </div>
+           </div>
+
+           <div class="store-menu foot">
+              <div class="foot-2 zoro">Store <i class="fa-solid fa-plus"></i></div>
+              <div class="menus"><a href="#">Tablet</a></div>
+              <div class="menus"><a href="#">TV & Display</a></div>
+              <div class="menus"><a href="#">Audio</a></div>
+              <div class="menus"><a href="#">Wearables</a></div>
+              <div class="menus"><a href="#">Cases & Protection</a></div>
+              <div class="menus"><a href="#">Power & Cables</a></div>
+              <div class="menus"><a href="#">Bundles</a></div>
+              <div class="menus"><a href="#">Gear</a></div>
+           </div>
+
+           <div class="support-menu foot">
+              <div class="foot-3 zoro">Support <i class="fa-solid fa-plus"></i></div>
+              <div class="menus"><a href="#">Protection Plan</a></div>
+              <div class="menus"><a href="#">Shopping FAQs</a></div>
+              <div class="menus"><a href="#">User Manuals</a></div>
+              <div class="menus"><a href="#">Service Centers</a></div>
+              <div class="menus"><a href="#">Affiliate Program</a></div>
+              <div class="menus"><a href="#">Repair Service</a></div>
+              <div class="menus"><a href="#">Repair Pricing</a></div>
+              <div class="menus"><a href="#">TV Spare Part Price</a></div>
+              <div class="menus"><a href="#">Software Update</a></div>
+           </div>
+
+           <div class="explore-menu foot">
+              <div class="foot-4 zoro">Explore <i class="fa-solid fa-plus"></i> </div>
+              <div class="menus"><a href="#">About OnePlus</a></div>
+              <div class="menus"><a href="#">Community</a></div>
+              <div class="menus"><a href="#">Find a store</a></div>
+              <div class="menus"><a href="#">OnePlus Store app</a></div>
+              <div class="menus"><a href="#">OxygenOS</a></div>
+              <div class="menus"><a href="#">Press</a></div>
+              <div class="menus"><a href="#">Blog</a></div>
+              <div class="menus"><a href="#">Careers</a></div>
+              <div class="menus"><a href="#">Campus Opportunities</a></div>
+           </div>
+           <div class="program-menu foot">
+              <div class="foot-5 zoro">Progams <i class="fa-solid fa-plus"></i></div>
+              <div class="menus"><a href="#">Exchange Program</a></div>
+              <div class="menus"><a href="#">Red Cable Club</a></div>
+           </div>
+
+        </div>
+
+        <div class="separator-2"></div>
+
+        <div class="social">
+           <div class="left-social">
+              <div class="credit">
+                 <i class="fa-regular fa-credit-card"></i>
+                 Credit/Debit Card
+              </div>
+              <div class="netbank">
+                 <i class="fa-solid fa-building-columns"></i>
+                 NetBanking
+              </div>
+              <div class="emi">
+                 <i class="fa-solid fa-chart-pie"></i>
+                 EMI
+              </div>
+              <div class="wallet">
+                 <i class="fa-solid fa-wallet"></i>
+                 Wallet
+              </div>
+           </div>
+
+           <div class="right-social">
+              <div class="fb">
+                 <i class="fa-brands fa-facebook"></i>
+              </div>
+              <div class="twit">
+                 <i class="fa-brands fa-x-twitter"></i>
+              </div>
+              <div class="insta">
+                 <i class="fa-brands fa-instagram"></i>
+              </div>
+              <div class="get">
+                 Get Support From OnePlus<i class="fa-solid fa-chevron-down"></i>
+              </div>
+           </div>
+
+        </div>
+        <hr>
+        <div class="separator-2"></div>
+
+        <div class="social-1">
+           <div class="left-social-1">
+              <div class="haz">
+                 Privacy Policy
+              </div>
+              <div class="haz">
+                 User Agreement
+              </div>
+              <div class="haz">
+                 Terms of Sales
+              </div>
+              <div class="haz">
+                 E-waste management
+              </div>
+              <div class="haz">
+                 Security Feedback
+              </div>
+              <div class="haz">
+                 © 2013 - 2023 OnePlus. All Rights Reserved.
+              </div>
+              <div class="haze">
+                 <img src="https://image01.oneplus.net/shop/202307/14/1-M00-46-89-CkvTlmSxGVyABjEvAAAMWxG1ttA783.png"
+                    alt="">
+              </div>
+           </div>
+
+           <div class="right-social-1">
+              <div class="get">
+                 India(English) <i class="fa-solid fa-globe"></i>
+              </div>
+           </div>
+
+        </div>
+     </div>
+
 
 </body>
 
