--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
             <div class="phone-menu foot">
                <div class="foot-1 zoro">Phone <i class="fa-solid fa-plus"></i></div>
                <div class="foot-1-menu">
-                  <div class="menus"><a href="#">OnePlus Open</a></div>
+                  <div class="menus"><a href="product.html">OnePlus Open</a></div>
                   <div class="menus"><a href="#">OnePlus 11 5G</a></div>
                   <div class="menus"><a href="#">OnePlus 11R 5G</a></div>
                   <div class="menus"><a href="#">OnePlus Nord 3 5G</a></div>
