--- a/phone.html
+++ b/phone.html
@@ -238,9 +238,9 @@
 
             <div class="product-section">
                 <div class="product-card">
-                    <div class="prod-img">
+                    <a href="product.html"><div class="prod-img">
                         <img
-                            src="https://image01-in.oneplus.net/ebp/202310/17/1-m00-52-35-cpgm7wuuomgatw8uaauvq6fkx88826.png?x-amz-process=image/format">
+                            src="https://image01-in.oneplus.net/ebp/202310/17/1-m00-52-35-cpgm7wuuomgatw8uaauvq6fkx88826.png?x-amz-process=image/format"></a>
                     </div>
                     <div class="prod-desc">
                         <div class="new2">New</div>
