--- a/product.html
+++ b/product.html
@@ -54,6 +54,10 @@
          </div>
       </div>
    </div>
+   <div class="btn-container">
+      <div class="add-to-cart">Add to cart</div>
+      <div class="buy-now">Buy now</div>
+   </div>
 
    <div class="product-section">
       <div class="prod-img">
@@ -202,8 +206,8 @@
          <div class="pagination">
             <i class="fa-solid fa-chevron-left"></i>
             <div class="dot"></div>
-            <div class="dot2 dot"></div>
-            <i class="fa-solid fa-chevron-right"></i>
+            <div class="dot dot2"></div>
+            <i class="right-dot fa-solid fa-chevron-right"></i>
          </div>
          <hr>
          <div class="prod-benefits">
@@ -289,10 +293,250 @@
 
             </div>
          </div>
-
+         <hr>
+         <div class="protection-plan">
+            <div class="head1">Protection Plan</div>
+            <div class="damage">
+               <div class="damage-head">Accidental Damage Protection Plan</div>
+               <div class="two-btn">
+                  <div class="btn">Popular</div>
+                  <div class="btn">70%off</div>
+               </div>
+               <div class="damage-price">
+                  <div>₹2,100</div>
+                  <p><span>₹6,999</span>(Tax included) / 12 Months</p>
+               </div>
+               <hr>
+               <div class="damage-desc">
+                  <p>1. Covers the damages to the phone by all accidental drop, crash, breakage, or liquid.</p>
+                  <p>2. To buy the Protection Plan, you need to read and agree to the Product Summary and Terms and
+                     Conditions.
+                  </p>
+               </div>
+            </div>
+            <div class="show-more">
+               Show more<i class="fa-solid fa-chevron-down"></i>
+            </div>
+         </div>
+         <hr>
+         <div class="delivery">
+            <div class="head">Delivery</div>
+            <div class="date">
+               <i class="fa-solid fa-truck-fast"></i>
+               <div class="fast">
+                  <p>Fastest:</p>
+                  <h3>Saturday, Nov 4</h3>
+               </div>
+            </div>
+            <div class="order">(If you order by 13:00 PM)</div>
+            <hr>
+            <div class="accurate">
+               <i class="fa-solid fa-location-dot"></i>
+               <p>Add PIN to see accurate delivery time</p>
+            </div>
+         </div>
+         <div class="still-questions">
+            <div class="sq-text">
+               <div class="sq-text-sub-head">
+                  Still have questions?
+               </div>
+               <div class="sq-text-head">
+                  Join a live demo hosted by OnePlus specialists
+               </div>
+               <div class="sq-text-join"><a href="#">Join now</a></div>
+            </div>
+         </div>
+         <div class="warranty">
+            <div class="year">
+               <div class="left-w">
+                  <img
+                     src="https://image01.oneplus.net/ebp/202110/29/1-M00-2F-2F-rB8bwmF7lrOAAyzpAAABmZxHS-Y525.png?x-amz-process=image/format,webp/quality,Q_80">
+                  <p>Extended Replacement Policy</p>
+               </div>
+               <div class="right-w"><i class="fa-solid fa-chevron-right"></i></div>
+            </div>
+            <div class="year">
+               <div class="left-w"><img
+                     src="https://image01.oneplus.net/ebp/202110/29/1-M00-2F-2F-rB8bwmF7lv2AMQ6IAAACu3av-4A695.png?x-amz-process=image/format,webp/quality,Q_80">
+                  <p>1 Year Warranty</p>
+               </div>
+               <div class="right-w"><i class="fa-solid fa-chevron-right"></i></div>
+            </div>
+         </div>
+         <hr>
+         <div class="payments">
+            <div class="payments-head">Payments</div>
+            <div class="payments-img">
+               <img
+                  src="https://image01.oneplus.net/ebp/202111/02/1-M00-2F-68-rB8LB2GA67yAOHv7AAAGX1dT1mo631.png?x-amz-process=image/format,webp/quality,Q_80">
+               <img
+                  src="https://image01.oneplus.net/ebp/202111/02/1-M00-2F-67-rB8bwmGA67KAd97lAAAEgUQdSBw221.png?x-amz-process=image/format,webp/quality,Q_80">
+               <img src="https://image01.oneplus.net/ebp/202112/24/1-M00-32-4F-rB8bwmHFLhyAJddjAAAPQb9kcyE815.svg">
+               <img
+                  src="https://image01.oneplus.net/ebp/202111/02/1-M00-2F-68-rB8bwmGA69aAZOVhAAAD4jpZ6FE115.png?x-amz-process=image/format,webp/quality,Q_80">
+               <img
+                  src="https://image01.oneplus.net/ebp/202111/02/1-M00-2F-68-rB8LB2GA7CKAMbLhAAAFo1Z-KXE012.png?x-amz-process=image/format,webp/quality,Q_80">
+               <img
+                  src="https://image01.oneplus.net/ebp/202111/02/1-M00-2F-68-rB8LB2GA9DCAWqL3AAAG2O75PQk734.png?x-amz-process=image/format,webp/quality,Q_80">
+            </div>
+         </div>
+         <hr>
+         <div class="payments">
+            <div class="payments-head">Shipping</div>
+            <div class="payments-img">
+               <img src="https://image01-in.oneplus.net/india-oneplus-statics-file/epb/202309/07/fTO2ocOP67tmzRr3.svg">
+               <img src="https://image01-in.oneplus.net/india-oneplus-statics-file/epb/202309/07/8XePgsx2vcaAEpu7.svg">
+            </div>
+         </div>
+         <hr>
+         <div class="box">
+            <div class="box-head">
+               What’s in the box
+            </div>
+            <div class="box-img">
+               <div class="box-image">
+                  <img
+                     src="https://image01-in.oneplus.net/india-oneplus-statics-file/epb/202310/17/5qNDgaSjnsVyzQtc.png?x-amz-process=image/format,webp/quality,Q_80">
+                  <p>
+                     OnePlus Open
+                  </p>
+               </div>
+               <div class="box-image">
+                  <img
+                     src="https://image01-in.oneplus.net/india-oneplus-statics-file/epb/202310/17/n9cAnuC8IUAZ7riH.png?x-amz-process=image/format,webp/quality,Q_80">
+                  <p>
+                     Protective Case
+                  </p>
+               </div>
+               <div class="box-image">
+                  <img
+                     src="https://image01-in.oneplus.net/india-oneplus-statics-file/epb/202310/19/Rp1CN6z6jFUHRk9S.png?x-amz-process=image/format,webp/quality,Q_80">
+                  <p>
+                     80W SUPERVOOC Power Adapter
+                  </p>
+               </div>
+               <div class="box-image">
+                  <img
+                     src="https://image01-in.oneplus.net/india-oneplus-statics-file/epb/202310/19/OlkqEV1KJH5yLuIY.png?x-amz-process=image/format,webp/quality,Q_80">
+                  <p>
+                     OnePlus Type-A to Type-C Cable
+                  </p>
+               </div>
+            </div>
+         </div>
       </div>
    </div>
+   <div class="grids">
+      <div class="grid">
+         <div class="grid-1">
+            <div class="grid-1-text">
+               <div class="text-head">
+                  Light and compact. It's Pro sizing on a fold.
+               </div>
+               <div class="text-sub-head">
+                  Lighter than any Fold at 239 grams, weighs just like a Pro Max. The Open is all sized up for a familiar
+                  hold.
+               </div>
+            </div>
+         </div>
+         <div class="grid-2">
+            <div class="grid-2-text">
+               <div class="text-head">
+                  Extraordinary materials blend the best of both.
+               </div>
+               <div class="text-sub-head">
+                  Titanium alloy, carbon fiber, and more. Built to the hilt with aerospace-grade materials up to 4 times
+                  stronger than surgical-grade stainless steel.
+               </div>
+            </div>
+   
+         </div>
+      </div>
+      <div class="grid">
+         <div class="grid-2 proxdr">
+            <div class="grid-2-text">
+               <div class="text-head-black">
+                  ProXDR displays, in and out.
+               </div>
+               <div class="text-sub-head">
+                  2K resolution, 120Hz and peak brightness of 2800 nits, both AMOLED displays are perfected for Dolby
+                  Vision. Brighter and sharper than your average Pro phone or tablet.
+               </div>
+            </div>
+   
+         </div>
+         <div class="grid-1 gamechanging">
+            <div class="grid-1-text">
+               <div class="text-head-black">
+                  Game-changing multitasking
+               </div>
+               <div class="text-sub-head">
+                  With Open Canvas on OxygenOS13.2, extend split-screen apps and flow beyond the display. The screen giant
+                  upsizes your possibilities with more real estate.
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="grid">
+         <div class="grid-1 camera">
+            <div class="grid-1-text">
+               <div class="text-head">
+                  Hasselblad Camera for Fold.
+               </div>
+               <div class="text-sub-head">
+                  48MP SONY LYT-T808 "Pixel Stacked" Sensor. Light up the night with dynamic range and light intake on par
+                  with traditional IMX 1-inch smartphone sensors.
+               </div>
+            </div>
+         </div>
+         <div class="grid-2 snapdragon">
+            <div class="grid-2-text">
+               <div class="text-head-black">
+                  OnePlus Fast and Smooth. More power than you can handle.
+               </div>
+               <div class="text-sub-head">
+                  Snapdragon® 8 Gen 2. 16GB LPDDR5X RAM accelerated by RAM-Vita. 512GB UFS4.0 ROM. 4805 mAh battery. 67W
+                  Charging.
+               </div>
+            </div>
+   
+         </div>
+      </div>
+      <div class="learn-more">Learn more <i class="fa-solid fa-chevron-right"></i></div>
+   </div>
+   <div class="faqs">
+      <div class="faq-head">FAQ</div>
+      <div class="faq">
+         <p>What payment method I could choose?</p>
+         <i class="fa-solid fa-plus"></i>
+      </div>
+      <div class="faq">
+         <p>When will I receive my order?</p>
+         <i class="fa-solid fa-plus"></i>
+      </div>
+      <div class="faq">
+         <p>What is the warranty policy for the OnePlus Open device?</p>
+         <i class="fa-solid fa-plus"></i>
+      </div>
+      <div class="faq">
+         <p>How can I find a service center in India?</p>
+         <i class="fa-solid fa-plus"></i>
+      </div>
+      <div class="faq">
+         <p>After I have completed the online purchase, when can I pick up the product(s) in store?</p>
+         <i class="fa-solid fa-plus"></i>
+      </div>
+      <div class="faq">
+         <p>What information is required for in-store pickup verification?</p>
+         <i class="fa-solid fa-plus"></i>
+      </div>
+   </div>
+   <hr>
+   <div class="did-this">
+      Did this page help you? <span><a href="#">Share your feedback</a></span>
+   </div>
 
+   
    <div class="footer">
       <div class="separator-2"></div>
 
@@ -436,6 +680,7 @@
 
       </div>
    </div>
+
 </body>
 
 </html>
